--- a/_css/style.css
+++ b/_css/style.css
@@ -15,3 +15,29 @@ a.icon.icon-home {
   margin-bottom: 0;
   color: #E3F6F7;
 }
+
+#coop-name {
+  font-size: x-large;
+  font-style: italic;
+  font-weight: 700;
+  font-family: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif;
+}
+
+h1 > a:visited, h1 > a,
+h2 > a:visited, h2 > a,
+h3 > a:visited, h3 > a,
+h4 > a:visited, h4 > a,
+h5 > a:visited, h5 > a,
+h6 > a:visited, h6 > a {
+  color: #404040;
+}
+
+h1 > a:hover,
+h2 > a:hover,
+h3 > a:hover,
+h4 > a:hover,
+h5 > a:hover,
+h6 > a:hover,
+a:hover.fa {
+  color: #2980B9;
+}
