--- a/_css/style.css
+++ b/_css/style.css
@@ -45,3 +45,12 @@ a:hover.fa {
 div.rst-content div.section ol li {
   list-style: lower-alpha;
 }
+
+div.rst-content div.section ol li ol li {
+  list-style: lower-roman;
+}
+
+div.rst-content div.section ol li ol {
+  margin-bottom: 0px;
+}
+
