--- a/_css/menu.css
+++ b/_css/menu.css
@@ -4,7 +4,7 @@ ul.subnav > li > span {
   display: none;
 }
 
-/* Indent 2nd-level placeholder pages.*/
+/* Indent 2nd-level menus.*/
 ul.subnav > li.toctree-l1 > a.current {
   padding-left: 2.4em !important;
 }
@@ -12,7 +12,7 @@ ul.subnav > li.toctree-l1.current > ul > li > a {
   padding-left: 3.4em !important;
 }
 
-
+/* Indent 3rd-level menus.*/
 ul.subnav > ul.subnav,
 ul.subnav > ul.subnav > li {
   margin-left: -1em;
@@ -25,3 +25,32 @@ ul.subnav > ul.subnav > li.current > a {
 ul.subnav > ul.subnav > li.current > ul > li > a {
   padding-left: 5.4em !important;
 }
+
+/* Indent 4th-level menus.*/
+ul.subnav > ul.subnav > ul.subnav,
+ul.subnav > ul.subnav > ul.subnav > li {
+  margin-left: -1.5em;
+}
+
+ul.subnav > ul.subnav > ul.subnav > li > a,
+ul.subnav > ul.subnav > ul.subnav > li.current > a {
+  padding-left: 6.4em !important;
+}
+ul.subnav > ul.subnav > ul.subnav > li.current > ul > li > a {
+  padding-left: 7.4em !important;
+}
+
+/* Add collapsible markers */
+.current .subnav a.expander,
+.subnav a.expander {
+  float: left;
+  margin-left: -1.4em !important;
+  margin-right: -2.3em !important;
+  /*padding: 0.4045em 0em 0.4045em 1.618em !important;*/
+  padding-right: 0;
+  z-index: 10;
+}
+
+.collapse {
+  display: none !important;
+} 
