--- a/_css/menu.css
+++ b/_css/menu.css
@@ -41,11 +41,13 @@ ul.subnav > ul.subnav > ul.subnav > li.current > ul > li > a {
 }
 
 /* Add collapsible markers */
+.current a.expander.top-level,
+a.expander.top-level,
 .current .subnav a.expander,
 .subnav a.expander {
   float: left;
-  margin-left: -1.4em !important;
-  margin-right: -2.3em !important;
+  margin-left: -1.4em;
+  margin-right: -2.3em;
   /*padding: 0.4045em 0em 0.4045em 1.618em !important;*/
   padding-right: 0;
   z-index: 10;
